test/ui/tests/name-resolution/modules-second-class.stderr
error[E023]: module `am-i-a-record` is used as a value
 --> ${TEST_FOLDER}/name-resolution/modules-second-class.lushui:5:14
  |
5 | r0: RECORD = am-i-a-record
  |              ^^^^^^^^^^^^^
  |
 help: modules are not first-class citizens, consider utilizing records for such cases instead

error[E023]: module `am-i-a-record-too` is used as a value
  --> ${TEST_FOLDER}/name-resolution/modules-second-class.lushui:11:28
   |
11 | r1: RECORD = am-i-a-record.am-i-a-record-too
   |                            ^^^^^^^^^^^^^^^^^
   |
  help: modules are not first-class citizens, consider utilizing records for such cases instead

error[E021]: the binding `ANOTHER-RECORD` is not defined in this scope
  --> ${TEST_FOLDER}/name-resolution/modules-second-class.lushui:15:5
   |
15 | r2: ANOTHER-RECORD = am-i-a-record-too
   |     ^^^^^^^^^^^^^^
   |

error[E023]: module `am-i-a-record-too` is used as a value
  --> ${TEST_FOLDER}/name-resolution/modules-second-class.lushui:15:22
   |
15 | r2: ANOTHER-RECORD = am-i-a-record-too
   |                      ^^^^^^^^^^^^^^^^^
   |
  help: modules are not first-class citizens, consider utilizing records for such cases instead

error: aborting due to 4 previous errors

